# rental

./: .gitignore  Cargo.toml  Rocket.toml  hello  license
src/: lib.rs  main.rs
src/controllers/: car.rs  index.rs  mod.rs  signin.rs  signup.rs  users.rs
src/interfaces/: repository.rs
src/models/: car_model.rs  mod.rs  note_model.rs  user_model.rs
src/repo/: car_repo.rs  mod.rs  note_repo.rs  user_repo.rs
static/: test.html
templates/: base.html.tera  home.html.tera  index.html.tera  signin.html.tera  signup.html.tera  ui.html.tera
