[package]
name = "rental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4"
serde = "1" # Used in the Map Data into Structs section
dotenv = "0.15.0"
futures = "0.3.24"
sha2 = "0.10.5"
base64 = "0.21.0"


